fix bug wrong font url.

--- a/install_manager/public/css/fonts.scss
+++ b/install_manager/public/css/fonts.scss
@@ -3,12 +3,12 @@
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: url('../../public/font/raleway.eot'); /* IE9 Compat Modes */
+  src: url('../../assets/install_manager/font/raleway.eot'); /* IE9 Compat Modes */
   src: local(''),
-  url('../../public/font/raleway.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../../public/font/raleway.woff2') format('woff2'), /* Super Modern Browsers */
-  url('../../public/font/raleway.woff') format('woff'), /* Modern Browsers */
-  url('../../public/font/raleway.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('../../public/font/raleway.svg#sansation') format('svg'); /* Legacy iOS */
+  url('../../assets/install_manager/font/raleway.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../../assets/install_manager/font/raleway.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../../assets/install_manager/font/raleway.woff') format('woff'), /* Modern Browsers */
+  url('../../assets/install_manager/font/raleway.ttf') format('truetype'), /* Safari, Android, iOS */
+  url('../../assets/install_manager/font/raleway.svg#sansation') format('svg'); /* Legacy iOS */
 }
 
